Fixed the overflow on the message.

--- a/landingPages/birthday_card/styles.css
+++ b/landingPages/birthday_card/styles.css
@@ -45,14 +45,14 @@ main {
   width: 100%;
   text-align: center;
   font-family: "Dancing Script", cursive;
-  height: 25%;
+  height: 15%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .body {
-  height: 75%;
+  height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,18 +68,6 @@ h1 {
   font-size: 4rem;
 }
 
-.message {
-  height: 66.99%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#message-paragraph {
-  height: 100%;
-}
-
 #message-paragraph p {
   padding: 0.5rem;
   font-size: 1.25rem;
@@ -89,10 +77,6 @@ h1 {
 h2 {
   font-size: 3rem;
   padding: 1rem;
-  color: white;
-}
-
-footer p {
   color: white;
 }
 
